--- a/bin/index.html
+++ b/bin/index.html
@@ -15,6 +15,24 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1' />
     <meta http-equiv='expires' content='0' />
     <meta http-equiv='Cache-Control' content='no-siteapp' />
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            box-sizing: border-box;
+        }
+        #bgImage{
+            width:2000px;
+            height:2000px;
+            display:inline-block;
+            background-color: #282828;
+            position: fixed;
+            top:0;
+            left:0;
+            z-index: -9999999999999;
+        }
+    </style>
 </head>
 
 <body>
@@ -27,6 +45,7 @@
         }
     </script>
     <script type="text/javascript" src="index.js"></script>
+    <div id='bgImage'></div>
 </body>
 
 </html>
