修正怪物擊退方向、修正背景顏色

--- a/bin/index.html
+++ b/bin/index.html
@@ -26,7 +26,10 @@
             width:2000px;
             height:2000px;
             display:inline-block;
-            background-color: #282828;
+            background-color: #000;
+            /* background: linear-gradient(); */
+            /* background: linear-gradient(90deg, rgba(50,48,51,1) 0%, rgba(40,6,6,1) 50%, rgba(43,31,14,1) 100%); */
+            /* background-image: url('../laya/assets/UI/town.png'); */
             position: fixed;
             top:0;
             left:0;
