角色棄置時取消註冊手機版按鈕事件

--- a/release/web/index.html
+++ b/release/web/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>www.layabox.com</title>
+    <title>Cathulhu-H5</title>
     <meta charset='utf-8' />
     <meta name='renderer' content='webkit' />
     <meta name='viewport' content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no'
